ecmascript/parser/tests/test262-error-references/fail/4cce9feb5a563377.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/4cce9feb5a563377.js:1:9
  |
1 | (a,...a)
  |         ^

